logo responsiveness checked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="mx-auto px-4 md:px-10 lg:max-w-5xl">
       <!-- Navbar -->
       <header class="flex items-center justify-between p-6">
-          <h1 class="text-2xl font-bold">RSA Architects</h1>
+          <h1 class="md:text-2xl text-xl font-bold">RSA Architects</h1>
           
           <!-- Mobile Menu Toggle Button -->
           <button id="navbar-toggle" class="md:hidden p-2 text-gray-600">
